testsuite/tests/ghc-regress/typecheck/should_fail/tcfail111.hs
-- Ambiguity check for instance declarations

module ShouldFail where

class Wob a 

instance Wob a => Wob Bool
